2.1.6 (unreleased)
------------------

- new quality report - operator [amleczko]
- fix problem with js select in teken listing [amleczko]
- svn_login no longer required during user creation [amleczko]
- fix author override in new time entry creation [amleczko]
- estimations popover [amleczko]
- automatization for wizard form [amleczko]

2.1.5 (2014-01-09)
------------------

- security fix in group delete schema [amleczko]


2.1.4.1 (2014-01-08)
--------------------

- Enable newrelic hooks if config is available [amleczko]


2.1.4 (2014-01-07)
------------------

- internal develope can create customer_request [amleczko]
- fix populate_with_dummies script [amleczko]


2.1.3.1 (2013-12-23)
--------------------

- performance fixes for cr_listing (tekken) [amleczko]


2.1.3 (2013-12-23)
------------------

- update dashboard [amleczko]
- add fixes for wizard project form [amleczko]
- fix security check in tekken view [amleczko]
- update quality reports [amleczko]


2.1.2 (2013-12-23)
------------------

- Add massive time entry move [amleczko]
- Add workflow state change form for customer request listing (tekken) [amleczko]


2.1.1 (2013-12-20)
------------------

- fix reports filtering [amleczko]
- fix tekken js [amleczko]


2.1 (2013-12-20)
----------------

- switch to mandrill API [amleczko]
- remove backlog from main menu [amleczko]
- refactoring contracts [amleczko]


2.0.4 (2013-09-10)
------------------

- handle sorting gracefully [amleczko]
- fix smtp port [amleczko]


2.0.3 (2013-09-02)
------------------

- make sure xmlrpc is handling dns errors [amleczko]
- fix owner role bug [amleczko]


2.0.2 (2013-09-02)
------------------

- fix problem with proxy in front of xml-rpc protocol [amleczko]
- hide gevent-psycopg2 for a moment [amleczko]


2.0.1 (2013-08-31)
------------------

- switch to green psycopg2 [amleczko]


2.0 (2013-08-30)
----------------

- new dashboard [amleczko]
- kanban board bug fixes [amleczko]

2.0a (2013-08-26)
-----------------
